Fixed Overflow Issue on Mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,6 +52,7 @@ a {
     text-decoration: none;
 }
 
+html,
 body {
     overflow-x: hidden;
     scroll-behavior: smooth;
